# FmriHandler

./: .gitignore  ARCHITECTURE.md  README.md  app_gradio.py  pyproject.toml
cluster/: __init__.py  _spectral.py
data/: __init__.py  clustering.py  fmri.py  preprocessed.py  similarity.py
legacyRcode/: ROI_detection.R  code_test.R  code_test_fPCA.R  dendrogram.R  dendrogram_2.R  fmri_smoothing.R  scree_plot.R
notebook_test/: test.ipynb
similarity/: __init__.py  _correlation.py
transform/: __init__.py  _smoothing.py
ui/: __init__.py  components.py  pipeline.py  registry.py
viz/: __init__.py  plotly_cluster.py  silhouette_report.py
